--- a/src/components/UI/Navigation.module.css
+++ b/src/components/UI/Navigation.module.css
@@ -4,17 +4,35 @@
   align-items: baseline;
   color: #058ffc;
   background-color: #fff;
-  justify-content: space-between;
   width: 56vw;
   margin: 0 auto;
+  width: 87.5rem;
+  height: 5.938rem;
+  margin: 0 0 2.375rem;
+  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
 }
 
 .link {
   text-decoration: none;
-  color: #058ffc;
-  padding: 0.5em;
-  font-size: 1.3em;
-  letter-spacing: 0.05em;
+  font-size: 0.813rem;
+  text-transform: uppercase;
+  width: 3.688rem;
+  height: 1rem;
+  margin: 1.125rem 2.563rem 0.688rem 0;
+  letter-spacing: 1.9px;
+  color: #121212;
+}
+
+.offLink {
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 6.563rem;
+  height: 1rem;
+  margin: 1.125rem 41.5rem 0.688rem 0;
+  opacity: 0.5;
+  font-size: 0.813rem;
+  letter-spacing: 1.9px;
+  color: #121212;
 }
 
 .navigation {
