Style nav header

--- a/src/components/UI/Navigation.module.css
+++ b/src/components/UI/Navigation.module.css
@@ -1,15 +1,14 @@
 .headerNav {
   display: flex;
   flex-direction: row;
-  align-items: baseline;
+  align-items: center;
   color: #058ffc;
   background-color: #fff;
-  width: 56vw;
   margin: 0 auto;
   width: 87.5rem;
-  height: 5.938rem;
+  height: 1rem;
   margin: 0 0 2.375rem;
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  padding: 2.5rem 6.188rem 1rem 10rem;
 }
 
 .link {
