Style book details div

--- a/src/routes/BooksContainer.module.css
+++ b/src/routes/BooksContainer.module.css
@@ -1,11 +1,13 @@
-.innerContent {
+.outerContent {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
-  margin: 0 auto;
-  height: 68.563rem;
-  border-radius: 4px;
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
   background-color: #F3F4F6;
+  height: 100vh;
+  padding-top: 2.37rem;
+}
+
+.innerContent {
+
 }
