--- a/src/components/Book.module.css
+++ b/src/components/Book.module.css
@@ -1,19 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Roboto+Slab:wght@100;300;500;600;700&display=swap');
+
 .bookDiv {
   background-color: #fff;
   display: flex;
   flex-direction: row;
+  align-content: center;
+  justify-content: center;
   margin-bottom: 1rem;
+  width: 82vw;
 }
 
 .bookDetails {
   display: flex;
   flex-direction: column;
   padding: 2rem 0 2rem 1.5rem;
+  flex-basis: 50%;
 }
 
 .category {
-  margin: 0 2.438rem 0 0;
   opacity: 0.5;
   font-size: 0.875rem;
   font-weight: bold;
@@ -21,7 +25,7 @@
 }
 
 .author {
-  margin: 0.188rem 20.188rem 0 0;
+  margin: 0.188rem 0 0 0;
   font-family: 'Roboto Slab', serif;
   font-size: 1.8rem;
   font-weight: bold;
@@ -49,7 +53,6 @@
 }
 
 .btnBook {
-
   font-family: 'Roboto Slab', serif;
   font-size: 0.875rem;
   font-weight: 300;
@@ -68,10 +71,106 @@
   padding-left: 0;
 }
 
+.completionStatus {
+  display: flex;
+  flex-direction: row;
+  border-right: 1px solid #e8e8e8;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.completionStatus svg {
+  width: 25%;
+}
+
+.completedPercentage {
+  margin: 0 0 0 0.6rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #000;
+}
+
+.completedText {
+  margin: 0 4rem 0.7rem 0.7rem;
+  opacity: 0.5;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
 .blueBar {
   color: #f0eff0;
 }
 
 .greyBar {
   color: #379cf6;
+}
+
+.chapterInfo {
+  padding-left: 4rem;
+  padding-right: 8rem;
+  display: flex;
+  flex-basis: 20%;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.currentChapter {
+  margin: 0.063rem 0 0 0;
+  opacity: 0.5;
+  font-family: 'Roboto Slab', serif;
+  text-transform: uppercase;
+  font-size: 0.87rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.chapterNo {
+  width: 4.688rem;
+  height: 1.313rem;
+  margin: 0.438rem 0 0 0;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
+  color: #121212;
+}
+
+.btnChapter {
+  width: 11.5rem;
+  height: 2.063rem;
+  margin: 0.75rem 0 0 0;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border-radius: 3px;
+  background-color: #0290ff;
+  cursor: pointer;
+  border: none;
+  text-transform: uppercase;
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff;
 }
