--- a/src/routes/BooksContainer.module.css
+++ b/src/routes/BooksContainer.module.css
@@ -3,9 +3,7 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  background-color: #F3F4F6;
+  background-color: #f3f4f6;
   height: 100vh;
   padding-top: 2.37rem;
 }
-
-
