--- a/src/components/Book.module.css
+++ b/src/components/Book.module.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Roboto+Slab:wght@100;300;500;600;700&display=swap');
 
+.normalFonts {
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
+
 .bookDiv {
   background-color: #fff;
   display: flex;
@@ -29,9 +36,6 @@
   font-family: 'Roboto Slab', serif;
   font-size: 1.8rem;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.2px;
   color: #121212;
 }
@@ -41,9 +45,6 @@
   font-family: 'Roboto Slab', serif;
   font-size: 1.2rem;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   color: #4386bf;
 }
@@ -89,11 +90,6 @@
   margin: 0 0 0 0.6rem;
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #000;
 }
 
@@ -102,11 +98,6 @@
   opacity: 0.5;
   font-family: 'Montserrat', sans-serif;
   font-size: 0.875rem;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #121212;
 }
 
@@ -134,10 +125,6 @@
   text-transform: uppercase;
   font-size: 0.87rem;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #121212;
 }
 
@@ -148,9 +135,6 @@
   font-family: 'Roboto Slab', serif;
   font-size: 1rem;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.4px;
   color: #121212;
 }
@@ -168,9 +152,6 @@
   font-family: 'Roboto Slab', serif;
   font-size: 0.813rem;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: 0.5px;
   text-align: center;
   color: #fff;
